[package]
name = "attiny85-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "1.0.0"
embedded-hal = "0.2.6"

[dependencies.attiny-hal]
git = "https://github.com/rahix/avr-hal"
branch = "main"
features = ["attiny85"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
